@@ -579,6 +579,7 @@ Release 0.20.0 - Unreleased
                MemStoreFlusher#checkStoreFileCount
    HBASE-1772  Up the default ZK session timeout from 30seconds to 60seconds
    HBASE-1754  Use TCP keepalives
+   HBASE-1800  Too many ZK connections
 
   OPTIMIZATIONS
    HBASE-1412  Change values for delete column and column family in KeyValue
